# generic-cell-rate-algorithm

./: .gitignore  README.md  example.ipynb  pyproject.toml
generic_cell_rate_algorithm/: __init__.py  throttle.py  util.py
tests/: conftest.py  test_conftest.py  test_throttle.py  test_util.py
