[project]
name = "generic-cell-rate-algorithm"
version = "0.1.1"
description = ""
authors = [
    {name = "Josh Smith", email = "racersmith@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.6.12"
pytest = "^8.3.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
pytest = "^8.3.5"
coverage = "^7.8.0"
